# bookmanager-server

./: .gitignore  Dockerfile  README.md  api.yml  app.py  docker-compose.yml  gunicorn.conf.py  pyproject.toml  setup.cfg
server/: Book.py  Record.py  User.py  __init__.py  api.py  auth.py  book.py  record.py  schema.sql  user.py  webview.py
server/static/: style.css
server/templates/: base.html  bookdetail.html  index.html
server/templates/book/: search.html
server/templates/record/: detail.html  index.html  record.html
tests/: conftest.py  data.sql  test_api.py  test_auth.py  test_book.py  test_db.py  test_factory.py  test_record.py  test_record_new.py  test_web.py
