[tool.poetry]
name = "bookmeter-server"
version = "0.0.1"
description = ""
authors = ["nesosuke <neso@neso.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
requests = "^2.27.1"
bs4 = "^0.0.1"
lxml = "^4.7.1"
gunicorn = "^20.1.0"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
